src/main/java/com/example/shoppingcart/error/ProductNotFoundException.java
package com.example.shoppingcart.error;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(String message) {
        super(message);
    }
}
